<resources>
    <string name="app_name">Learning</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_in_signup_btn">Need An Account? Sign Up Here</string>
    <string name="sign_up_name">Enter Name</string>
    <string name="sign_up_c_password_hint">Confirm Password</string>
    <string name="already_hacve_an_account">Already have an Account? Sign In here</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
